# libsmartcols-bindings

./: .buildinfo  CMakeLists.txt  README.md  cell.i  column.html  column.i  example.lua  example.pl  example.py  example.rb  genindex.html  index.html  line.html  line.i  objects.inv  search.html  searchindex.js  smartcols.i  symbols.html  symbols.i  table.html  table.i
_sources/: table.txt
bindings/: CMakeLists.txt  smartcols.i
cmake/: FindSphinx.cmake  oldstream_hack.cc
docs/: CMakeLists.txt  cell.rst  column.rst  conf.py.in  index.rst  line.rst  table.rst
examples/: example.lua  example.pl  example.py  example.rb
ruby/: smartcols.rb
src/: CMakeLists.txt  cell.cc  column.cc  line.cc  smartcolspp.hh  symbols.cc  table.cc  util.cc  util.hh
tests/: CMakeLists.txt  test_smartcols.py
tests/data/: default.txt  hidden.txt  right.txt  tree.txt
